# family-ai-voice-assistant

./: .gitignore  Dockerfile  LICENSE  README.md  README_CN.md
configs/: config.yaml  init_prompt.jinja  init_prompt.txt
scripts/: generate_asoundrc.py  install_requirements.sh
src/family-ai-voice-assistant-core/: README.md  README_CN.md  pyproject.toml
src/family-ai-voice-assistant-core/family_ai_voice_assistant/core/: __init__.py  assistant_console_client.py  assistant_with_api.py  basic_assistant.py  client_register.py  family_ai_voice_assistant.py
src/family-ai-voice-assistant-core/family_ai_voice_assistant/core/clients/: __init__.py  assistant_client.py  chat_session_client.py  client_manager.py  file_store_client.py  greeting_client.py  history_store_client.py  listening_client.py  llm_client.py  play_sound_client.py  recognition_client.py  speech_client.py  waker_client.py  watiable_result_client.py
src/family-ai-voice-assistant-core/family_ai_voice_assistant/core/config/: __init__.py  config.py  general_config.py  speech_recognition_config.py
src/family-ai-voice-assistant-core/family_ai_voice_assistant/core/config/_config_handler/: _config_handler_factory.py
src/family-ai-voice-assistant-core/family_ai_voice_assistant/core/configs/: config.py
src/family-ai-voice-assistant-core/family_ai_voice_assistant/core/contracts/: __init__.py  ask_question_request.py  chat_record.py  enums.py  function_info.py
src/family-ai-voice-assistant-core/family_ai_voice_assistant/core/helpers/: common_helpers.py  language_manager.py
src/family-ai-voice-assistant-core/family_ai_voice_assistant/core/logging/: __init__.py  _ai_assistant_logger.py
src/family-ai-voice-assistant-core/family_ai_voice_assistant/core/telemetry/: _tracer_manager.py
src/family-ai-voice-assistant-core/family_ai_voice_assistant/core/tools_engine/: _tool_functions_registration.py  tool_functions_manager.py
src/family-ai-voice-assistant-core/family_ai_voice_assistant/core/utils/: __init__.py  ai_output_filter.py  common_utils.py  constants_provider.py  decorators.py  global_instance_manager.py  language_manager.py  mongodb_manager.py  reflection_utils.py
src/family-ai-voice-assistant-impl/: pyproject.toml
src/family-ai-voice-assistant-impl/family_ai_voice_assistant/: basic_entry.py
src/family-ai-voice-assistant-impl/family_ai_voice_assistant/impl/chat_session_clients/: open_ai_chat_session.py
src/family-ai-voice-assistant-impl/family_ai_voice_assistant/impl/config/: __init__.py  azure_open_ai_config.py  azure_speech_config.py  coqui_tts_config.py  ollama_config.py  open_ai_config.py  openai_whisper_config.py  picovoice_config.py  snowboy_config.py
src/family-ai-voice-assistant-impl/family_ai_voice_assistant/impl/configs/: open_ai_config.py
src/family-ai-voice-assistant-impl/family_ai_voice_assistant/impl/llm_clients/: azure_open_ai.py  ollama.py  open_ai.py  open_ai_base.py
src/family-ai-voice-assistant-impl/family_ai_voice_assistant/impl/play_sound_clients/: playsound.py  pyaudio.py
src/family-ai-voice-assistant-impl/family_ai_voice_assistant/impl/speech_to_text/recognition_clients/: azure_recognition.py  openai_whisper.py
src/family-ai-voice-assistant-impl/family_ai_voice_assistant/impl/speech_to_text/waker_clients/: picovoice_waker.py  snowboy_waker.py
src/family-ai-voice-assistant-impl/family_ai_voice_assistant/impl/speech_to_text/waker_clients/_snowboy/: snowboydecoder.py  snowboydetect.py
src/family-ai-voice-assistant-impl/family_ai_voice_assistant/impl/text_to_speech/play_sound_clients/: sound_device.py
src/family-ai-voice-assistant-impl/family_ai_voice_assistant/impl/text_to_speech/speech_clients/: azure_speech.py  coqui_tts.py
src/family-ai-voice-assistant-impl/family_ai_voice_assistant/impl/text_to_speech/waitable_result_clients/: azure_speech_result.py
src/family-ai-voice-assistant-impl/family_ai_voice_assistant/impl/utils/: client_selector.py
src/family-ai-voice-assistant-tools/: README.md  README_CN.md  pyproject.toml
src/family-ai-voice-assistant-tools/family_ai_voice_assistant/tools/: __init__.py
src/family-ai-voice-assistant-tools/family_ai_voice_assistant/tools/config/: bulitin_tools_config.py
src/family-ai-voice-assistant-tools/family_ai_voice_assistant/tools/configs/: bulitin_tools_config.py
src/family-ai-voice-assistant-tools/family_ai_voice_assistant/tools/functions/: combination_tools.py  core.py  executors.py  local_apis.py  search.py  web_apis.py
