[tool.poetry]
name = "family-ai-voice-assistant-impl"
version = "0.1.0"
description = ""
authors = ["Augaria Ma <augaria@gmail.com>"]

include = [
    "family_ai_voice_assistant/impl/resources/**",
    "family_ai_voice_assistant/impl/speech_to_text/waker_clients/_snowboy/amd64/_snowboydetect.so",
    "family_ai_voice_assistant/impl/speech_to_text/waker_clients/_snowboy/arm64/_snowboydetect.so",
]

packages = [
  { include = "family_ai_voice_assistant" }
]

[tool.poetry.dependencies]
python = "<4.0,>=3.8"
family-ai-voice-assistant-core = "*"
pyaudio = "*"
sounddevice = "*"
pvporcupine = "2.2.0"
speechrecognition = "*"
azure-cognitiveservices-speech = "*"
openai = ">=1.0.0"
scipy = "*"
ollama = "*"

[tool.poetry.scripts]
start_family_ai_voice_assistant = "family_ai_voice_assistant.basic_entry:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
