[tool.poetry]
name = "family-ai-voice-assistant-impl"
version = "0.1.0"
description = ""
authors = ["Augaria Ma <augaria@gmail.com>"]

include = [
    "family_ai_voice_assistant/impl/resources/**",
    "family_ai_voice_assistant/impl/speech_to_text/waker_clients/_snowboy/amd64/_snowboydetect.so",
    "family_ai_voice_assistant/impl/speech_to_text/waker_clients/_snowboy/arm64/_snowboydetect.so",
]

packages = [
  { include = "family_ai_voice_assistant" }
]

[tool.poetry.dependencies]
python = "<4.0,>=3.9"
family-ai-voice-assistant-core = "*"
scipy = "*"
pyaudio = "*"
sounddevice = "*"
speechrecognition = "*"
pvporcupine = { version = "2.2.0", optional = true }
azure-cognitiveservices-speech = { version = "*", optional = true }
openai-whisper = { version = "*", optional = true }
openai = { version = ">=1.0.0", optional = true }
ollama = { version = "*", optional = true }
TTS = { version = "*", optional = true }

[tool.poetry.extras]
pvporcupine = ["pvporcupine"]
azure-speech = ["azure-cognitiveservices-speech"]
openai-whisper = ["openai-whisper"]
openai = ["openai"]
ollama = ["ollama"]
coqui-tts = ["TTS"]

[tool.poetry.scripts]
start_family_ai_voice_assistant = "family_ai_voice_assistant.basic_entry:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
